# graphwar

./: .dockerignore  .env.example  .gitignore  Cargo.toml  readme.md
.github/workflows/: ci.yml
assets/: NOTICE.md
assets/web/: graphwar.css  graphwar_client_wasm.js  graphwar_client_wasm_bg.wasm  index.html
crates/client-wasm/: Cargo.toml
crates/client-wasm/src/: animation.rs  browser.rs  geometry.rs  lib.rs  preview.rs  state.rs
crates/game-core/: Cargo.toml
crates/game-core/src/: constants.rs  expression.rs  generation.rs  lib.rs  model.rs  terrain.rs  trajectory.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  bot.rs  config.rs  lib.rs  main.rs  rooms.rs
deploy/: Caddyfile  Dockerfile  backup.sh  compose.yaml
migrations/: 0001_auth.sql
scripts/: e2e.mjs
spec/: parity.md
