[workspace]
members = [
    "crates/client-wasm",
    "crates/game-core",
    "crates/protocol",
    "crates/server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1"
cookie = "0.18"
futures-util = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo-net = "0.6"
gloo-timers = "0.3"
http = "1.3"
js-sys = "0.3"
password-hash = { version = "0.5", features = ["getrandom"] }
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "macros"] }
thiserror = "2.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip", "cors", "fs", "limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[profile.release]
lto = "thin"
strip = "symbols"
