[package]
name = "graphwar-client-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
gloo-timers.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = [
    "CanvasRenderingContext2d",
    "CloseEvent",
    "Document",
    "DomRect",
    "Element",
    "ErrorEvent",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlInputElement",
    "Location",
    "MessageEvent",
    "NodeList",
    "ProgressEvent",
    "WebSocket",
    "Window",
    "console",
] }
