[package]
name = "graphwar-client-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook.workspace = true
gloo-net.workspace = true
gloo-timers.workspace = true
graphwar-game-core = { path = "../game-core" }
graphwar-protocol = { path = "../protocol" }
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "Event",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "Location",
    "MessageEvent",
    "WebSocket",
    "Window",
] }
