[package]
name = "graphwar-client-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
graphwar-game-core = { path = "../game-core" }
graphwar-protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
gloo-net.workspace = true
gloo-timers.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "AbortController",
    "AbortSignal",
    "CanvasRenderingContext2d",
    "CloseEvent",
    "Document",
    "DomRect",
    "Element",
    "ErrorEvent",
    "Event",
    "EventTarget",
    "KeyboardEvent",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Location",
    "MessageEvent",
    "NodeList",
    "ProgressEvent",
    "RequestCredentials",
    "WebSocket",
    "Window",
    "console",
] }
